# llm_email_search

./: .gitignore  LICENSE  README.md  pyproject.toml
llm_email_search/: embed_emails.py  extract_demo_emails_to_sqlite.py  extract_emails_to_sqlite.py  extract_public_emails_to_sqlite.py  logger.py  run_query.py  streamlit_app.py
tests/: conftest.py  test_embed_emails.py  test_extract_emails.py  test_run_query.py
