[project]
name = "llm-email-search"
version = "0.1.0"
description = "This project allows the user to search their emails using natural language (instead of just keywords)."
authors = [
    {name = "Bridget Toomey"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "google-api-python-client (>=2.158.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "openai (>=1.59.6,<2.0.0)",
    "chromadb (>=0.6.2,<0.7.0)",
    "torch (>=2.5.1,<3.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "sentence-transformers (>=3.3.1,<4.0.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "einops (>=0.8.0,<0.9.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"


[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.poetry]
packages = [
    { include = "llm_email_search" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
